--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_native_splash: ^1.1.8+4
-  flutter_launcher_icons: ^0.9.0
+  flutter_native_splash:
+  flutter_launcher_icons:
 
 
 
@@ -58,7 +58,7 @@ flutter_native_splash:
 flutter_icons:
   android: "ic_laucher"
   ios: true
-  image_path: "../assets/app/img.png"
+  image_path: "assets/app/img.png"
   remove_alpha_ios: true
 
 
